--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "lab-telegram-bot",
+  "name": "lab-bot-dashboard",
   "version": "1.0.0",
-  "main": "api/webhook.js",
-  "license": "MIT",
+  "private": true,
+  "type": "commonjs",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "express": "^4.19.2",
     "firebase-admin": "^12.5.0",
-    "telegraf": "^4.16.3"
+    "jsonwebtoken": "^9.0.2"
   }
 }
