--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
+  "version": 2,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/index" }
+  ],
   "functions": {
-    "api/index.js": {
-      "maxDuration": 10
-    }
+    "api/index.js": { "maxDuration": 10 }
   }
 }
