--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lab-bot-dashboard",
+  "name": "telegram-lab-dashboard",
   "version": "1.0.0",
   "private": true,
   "type": "commonjs",
